# voxel

./: .gitignore  Cargo.toml  README.md  build_for_the_web.sh  game.toml
.github/workflows/: feature.yml  release.yml  rust.yml
assets/: README.me  atlas.aseprite  block-textures.aseprite  game.toml  grass.aseprite  stone.aseprite
assets/shaders/: lighten_factor.wgsl  outline.wgsl  wireframe.wgsl
scripts/: build_for_the_web.sh  deploy.sh
src/: game_state.rs  main.rs  settings.rs  utils.rs  web.rs
src/chunk/: block.rs  chunk.rs  mod.rs  noise.rs  perlin.rs  procedural.rs  voxel_chunk.rs
src/components/: gravity.rs
src/game_world/: coord.rs  generation.rs  mod.rs  player_position.rs  temporary.rs
src/logging/: mod.rs
src/player/: control.rs  cursor.rs  mod.rs  selection.rs
src/resources/: world.rs
src/screen/: mod.rs
src/selection/: mod.rs
src/sun/: mod.rs
src/systems/: gravity_system.rs  mod.rs  pan_orbit_camera.rs
src/systems/player/: mod.rs  player_control.rs
src/systems/world_generation/: mod.rs
src/toml_asset/: mod.rs
src/utils/: cube.rs  fresh_entity.rs  mod.rs  point.rs
src/world/: block.rs  chunk.rs  game_world.rs  generate_as_we_go.rs  mod.rs  world_generation.rs
src/world/systems/: chunk.rs
web/: .gitignore  docker-compose.yaml  index.html
