[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher"] }
bevy_rapier3d = { version = "0.31.0", features = ["debug-render-3d"]}
# bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d", features = ["debug-render-3d"]}
#bevy-inspector-egui = "0.19.0"
noise = "0.9.0"
toml = "0.9.5"
serde = "1.0.217"
serde_derive = "1.0.217"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
